--- a/res/style/other.qss
+++ b/res/style/other.qss
@@ -26,3 +26,12 @@ QTextEdit#chat[tp="show"] {
     padding: 10px 10px 10px 10px;
     font-size: 18px;
 }
+
+/* 聊天页面发送消息QTextEdit */
+QTextEdit#chat[tp="send"] {
+    padding-left: 5px;
+    padding-top: 2px;
+    padding-right: 5px;
+    padding-bottom: 2px;
+    font-size: 18px;
+}
